fixed html overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,14 @@
 html {
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
-  --outline: rgb(38 38 38); /* hover neutral */
+  --hovered: rgb(38 38 38); /* hover neutral */
   --nav: black;
   --main: white; /* gray */
   --selection: rgb(22 163 74);
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 *::selection {
@@ -20,8 +25,14 @@ header {
   display: flex;
   align-items: center;
   border-radius: 0.25rem;
+}
+
+header, nav, .nav-links, .nav-links a, .hamburger {
+  -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -50,6 +61,12 @@ main {
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 0.325926px 0.733333px 0px,
+      rgba(0, 0, 0, 0.07) 0px 1.54074px 2.86667px 0px,
+      rgba(0, 0, 0, 0.05) 0px 4px 9px 0px;
+}
+
 /* nav styles */
 nav {
   width:100%;
@@ -69,7 +86,7 @@ nav {
   display: block;width: 40px;
   height: 5px;
   background-color: white;
-  /*background-color: var(--outline);*/
+  /*background-color: var(--hovered);*/
 }
 
 .line:last-child {
@@ -78,25 +95,25 @@ nav {
 
 .nav-links {
   width: 100%;
-  display: flex;
   align-items: center;
   display: none;
-  margin: 0;
+  margin: 0px;
 }
 
 .nav-links a {
   display: block;
-  text-align: center;
-  padding: 2px 10px;
+  padding: 6px 16px;
   color: white;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: bold;
   /* text-transform: uppercase; */
 }
 
 .nav-links a:hover, a:focus {
-  background-color: var(--outline);
+  background-color: var(--hovered);
+  transition-duration: 300ms;
+  transition-property: background-color;
 }
 
 .expanded {
